--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
     "jest": "^25.5.0"
   },
   "dependencies": {
-    "@aws-cdk/core": "1.38.0"
+    "@aws-cdk/aws-apigateway": "^1.44.0",
+    "@aws-cdk/aws-dynamodb": "^1.44.0",
+    "@aws-cdk/aws-iam": "^1.44.0",
+    "@aws-cdk/aws-lambda": "^1.44.0",
+    "@aws-cdk/aws-logs": "^1.44.0",
+    "@aws-cdk/aws-s3": "^1.44.0",
+    "@aws-cdk/aws-sqs": "^1.44.0",
+    "@aws-cdk/core": "1.44.0"
   }
 }
